# mi-warehouse

./: .gitignore  LICENSE  README.md  convert_mi_cfr_data.py  convert_mi_election_data.py  election_file_documentation.txt  get_legiscan_data.py  get_mi_cfr_data.py  get_mi_election_data.py  important_committee_lookup.csv  install.sh  ml_requirements.txt  pyproject.toml  requirements.txt  scaffold_folders.py  sm_api.py
mi_cfr_duckdb/: dbt_project.yml  profiles.yml
mi_cfr_duckdb/macros/: choose_nonnull_value.sql
mi_cfr_duckdb/models/mart/: committee_burn_by_month.sql  committee_contributions_by_month.sql  committee_expenditures_by_month.sql  state_party_contributions.sql
mi_cfr_duckdb/models/ml/: dbt_ml_poc.sql
mi_cfr_duckdb/models/staging/: implied_committee_party.sql  stg_contributions.sql
mi_cfr_duckdb/plugins/: create_function_plugin.py
mi_cfr_duckdb/plugins/functions/: classify_expenditure.py  numpy_dummy.py
mi_cfr_duckdb_dbt/: profiles.yml
mi_cfr_duckdb_dbt/models/mart/: state_party_contributions.sql  state_party_contributions_pivot.sql  udf_examples.sql
mi_cfr_duckdb_dbt/models/ml/: python_dbt_cli.sql
mi_cfr_duckdb_dbt/models/staging/: stg_receipts.sql  (+2 more)
mi_cfr_duckdb_dbt/tests/: assert_unique_contribution_line.sql
mi_warehouse_dbt/: .sqlfluff  .user.yml  requirements.txt
notebooks/: duck_db_explorer.ipynb  more_on_duckdb_python_api.ipynb  party_caucus_contributions.ipynb  using_the_dbt_python_package.ipynb  zero_shot_expenditure_classification.ipynb
pylegiscan/: pylegiscan.py
semantic_layer/: models.py
streamlit/universal_swing/: main.py
(+34 files in other folders)
