[project]
name = "mi-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.1",
    "dbt>=1.0.0.40.0",
    "dbt-duckdb>=1.9.3",
    "duckdb>=1.2.2",
    "fastparquet>=2024.11.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "py7zr>=0.22.0",
    "streamlit>=1.44.1",
    "tqdm>=4.67.1",
]
